// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches album slider 1`] = `
<div>
  <main
    class="space-y-24"
    style="opacity: 0;"
  >
    <section
      class="mt-18"
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-zinc-600 dark:text-zinc-400"
        >
          These are a few of my favorite albums. You can also find me on
           
          <u>
            <a
              href="https://soundcloud.com/melledj"
              rel="noopener noreferrer"
              target="_blank"
            >
              SoundCloud
            </a>
          </u>
          .
        </p>
      </div>
      <div
        class="overflow-hidden mt-8"
      >
        <div
          class="flex w-max"
          style="gap: 24px; flex-direction: row; transform: none;"
        >
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`matches animated background 1`] = `
<div>
  <div
    class="z-10"
  />
</div>
`;

exports[`matches infinite slider 1`] = `
<div>
  <div
    class="overflow-hidden"
  >
    <div
      class="flex w-max"
      style="gap: 16px; flex-direction: row; transform: none;"
    />
  </div>
</div>
`;

exports[`matches magnetic link 1`] = `
<div>
  <div
    style="transform: none;"
  >
    <a
      class="group relative inline-flex shrink-0 items-center gap-[1px] rounded-full bg-zinc-100 px-2.5 py-1 text-sm text-black transition-colors duration-200 hover:bg-zinc-950 hover:text-zinc-50 dark:bg-zinc-800 dark:text-zinc-100 dark:hover:bg-zinc-700"
      href="/example"
      target="_blank"
    >
      <svg
        class="h-3 w-3"
        fill="none"
        height="15"
        viewBox="0 0 15 15"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M3.64645 11.3536C3.45118 11.1583 3.45118 10.8417 3.64645 10.6465L10.2929 4L6 4C5.72386 4 5.5 3.77614 5.5 3.5C5.5 3.22386 5.72386 3 6 3L11.5 3C11.6326 3 11.7598 3.05268 11.8536 3.14645C11.9473 3.24022 12 3.36739 12 3.5L12 9.00001C12 9.27615 11.7761 9.50001 11.5 9.50001C11.2239 9.50001 11 9.27615 11 9.00001V4.70711L4.35355 11.3536C4.15829 11.5488 3.84171 11.5488 3.64645 11.3536Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`matches scroll progress 1`] = `
<div>
  <div
    class="inset-x-0 top-0 h-1 origin-left"
    style="transform: scaleX(0);"
  />
</div>
`;

exports[`matches text effect 1`] = `
<div>
  <p
    style="opacity: 0;"
  >
    <span
      class="sr-only"
    />
    <span
      aria-hidden="true"
      class="inline-block whitespace-pre"
      style="opacity: 0;"
    />
  </p>
</div>
`;

exports[`matches text loop 1`] = `
<div>
  <div
    class="relative inline-block whitespace-nowrap"
  >
    <div
      style="opacity: 1; transform: none;"
    />
  </div>
</div>
`;
